--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -1,3 +1,4 @@
+<?xml version = "1.0"?>
 <web-app id="WebApp_ID" version="2.4"
    xmlns="http://java.sun.com/xml/ns/j2ee" 
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
@@ -5,6 +6,9 @@
    http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd">
 
    <display-name>Spring MVC Application</display-name>
+   <welcome-file-list>
+   <welcome-file>hello.jsp</welcome-file>
+   </welcome-file-list>
 
    <servlet>
       <servlet-name>HelloWeb</servlet-name>
