--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -8,10 +8,21 @@
     <servlet-name>Coffee</servlet-name>
     <servlet-class>com.example.web.CoffeeSelect</servlet-class>
   </servlet>
+  
+  <servlet>
+    <servlet-name>Register</servlet-name>
+    <servlet-class>com.example.web.Register</servlet-class>
+  </servlet>
 
   <servlet-mapping>
     <servlet-name>Coffee</servlet-name>
     <url-pattern>/SelectCoffee.do</url-pattern>
+  </servlet-mapping>
+  
+  
+  <servlet-mapping>
+    <servlet-name>Register</servlet-name>
+    <url-pattern>/Register.do</url-pattern>
   </servlet-mapping>
 
 </web-app>
