--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -1,4 +1,3 @@
-<?xml version = "1.0"?>
 <web-app id="WebApp_ID" version="2.4"
    xmlns="http://java.sun.com/xml/ns/j2ee" 
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
@@ -6,30 +5,18 @@
    http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd">
 
    <display-name>Spring MVC Application</display-name>
-   <welcome-file-list>
-   <welcome-file>index.html</welcome-file>
-   </welcome-file-list>
 
+   <servlet>
+      <servlet-name>Spring</servlet-name>
+      <servlet-class>
+         org.springframework.web.servlet.DispatcherServlet
+      </servlet-class>
+      <load-on-startup>1</load-on-startup>
+   </servlet>
 
-  <servlet>
-    <servlet-name>Coffee</servlet-name>
-    <servlet-class>com.example.web.CoffeeSelect</servlet-class>
-  </servlet>
-  
-  <servlet>
-    <servlet-name>Register</servlet-name>
-    <servlet-class>com.example.web.Register</servlet-class>
-  </servlet>
-
-  <servlet-mapping>
-    <servlet-name>Coffee</servlet-name>
-    <url-pattern>/SelectCoffee.do</url-pattern>
-  </servlet-mapping>
-  
-  
-  <servlet-mapping>
-    <servlet-name>Register</servlet-name>
-    <url-pattern>/Register.do</url-pattern>
-  </servlet-mapping>
-
+   <servlet-mapping>
+      <servlet-name>Spring</servlet-name>
+      <url-pattern>/</url-pattern>
+   </servlet-mapping>
+ 
 </web-app>
