--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -5,7 +5,9 @@
     xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
     id="WebApp_ID" version="2.5">
     <display-name>SpringMVC</display-name>
-
+    <welcome-file-list>
+        <welcome-file>/WEB-INF/jsp/hello.jsp</welcome-file>
+    </welcome-file-list>
 
    <servlet>
       <servlet-name>Spring</servlet-name>
@@ -19,5 +21,17 @@
       <servlet-name>Spring</servlet-name>
       <url-pattern>/</url-pattern>
    </servlet-mapping>
+   
+   
+     <context-param>
+	<param-name>contextConfigLocation</param-name>
+	<param-value>/WEB-INF/Spring-servlet.xml</param-value>
+  </context-param>
+ 
+  <listener>
+        <listener-class>
+		org.springframework.web.context.ContextLoaderListener
+        </listener-class>
+  </listener>
  
 </web-app>
