--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -5,12 +5,13 @@
     xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
     id="WebApp_ID" version="2.5">
     <display-name>SpringMVC</display-name>
-    <welcome-file-list>
+    
+<!--     <welcome-file-list>
         <welcome-file>/WEB-INF/jsp/hello.jsp</welcome-file>
-    </welcome-file-list>
+    </welcome-file-list> -->
 
    <servlet>
-      <servlet-name>Spring</servlet-name>
+      <servlet-name>spring</servlet-name>
       <servlet-class>
          org.springframework.web.servlet.DispatcherServlet
       </servlet-class>
@@ -18,14 +19,14 @@
    </servlet>
 
    <servlet-mapping>
-      <servlet-name>Spring</servlet-name>
+      <servlet-name>spring</servlet-name>
       <url-pattern>/</url-pattern>
    </servlet-mapping>
    
    
-     <context-param>
-	<param-name>contextConfigLocation</param-name>
-	<param-value>/WEB-INF/Spring-servlet.xml</param-value>
+  <context-param>
+	    <param-name>contextConfigLocation</param-name>
+	    <param-value>/WEB-INF/spring-servlet.xml</param-value>
   </context-param>
  
   <listener>
