--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -7,9 +7,9 @@
     
     <display-name>SpringMVC</display-name>
     
-    <welcome-file-list>
+<!--     <welcome-file-list>
         <welcome-file>/WEB-INF/jsp/index.jsp</welcome-file>
-    </welcome-file-list> 
+    </welcome-file-list>  -->
 
    <servlet>
       <servlet-name>spring</servlet-name>
