add top margin and left margin variable for boundary

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ WebContent/WEB-INF/jsp/index.jsp.BACKUP.13767.jsp
 WebContent/WEB-INF/jsp/index.jsp.BASE.13767.jsp
 WebContent/WEB-INF/jsp/index.jsp.LOCAL.13767.jsp
 WebContent/WEB-INF/jsp/index.jsp.REMOTE.13767.jsp
+/bin/
